fix: gallery can't display properly and sidebar gap

--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -65,7 +65,7 @@ body {
 }
 
 #nexmoe-header {
-    margin-left: -240px;
+    margin-left: -260px;
 
     .mdui-drawer {
         left: unset;
@@ -145,9 +145,9 @@ body {
         font-size: 0;
 
         a {
-            width: 36px;
-            height: 36px;
-            line-height: 36px;
+            width: 41px;
+            height: 41px;
+            line-height: 41px;
             margin: 4px;
             border-radius: 100%;
             display: inline-block;
@@ -631,7 +631,7 @@ body {
     }
 
     #nexmoe-header .nexmoe-social a {
-        margin: 10px;
+        margin: 5px;
         width: 44px;
         height: 44px;
         line-height: 44px;
@@ -767,4 +767,10 @@ photos img {
 
 .fancybox__container {
     z-index: 9999;
+}
+
+@media (min-width: 1024px) {
+    .mdui-drawer {
+        width: 260px;
+    }
 }
